feat: implement KeywordResolver context-sensitive keyword disambiguation
- Add context-sensitive keyword disambiguation to resolve ambiguous lowercase keywords
- Implement 2^N combination algorithm to try all uppercase/lowercase permutations
- Move BabyCobolParserUtils to preprocessing package for proper package access
- Configure ANTLR plugin to generate parser classes in dedicated 'parser' package
- Add Maven build-helper plugin to include generated sources in compilation
- Create comprehensive test suite for KeywordResolver (3 tests, all passing)
- Add test resource files for single/multiple/ambiguous keyword scenarios
- Update test imports to use new package structure
- All 12 tests passing including 3 new KeywordResolver tests